*Empty MediaWiki Message*

--- a/Swisi.mw
+++ b/Swisi.mw
@@ -1,6 +1,6 @@
 {{Infobox Esé|
 nkómbó               = Swisi |
-nkómbó_na_lokóta     = Confoederatio Helvetica<br>Confédération suisse<br>Confederazione Svizzera<br>Confederaziun svizra<br>Schweizerische Eidgenossenschaft<br>Switzerland|
+nkómbó_na_lokótá     = Confoederatio Helvetica<br>Confédération suisse<br>Confederazione Svizzera<br>Confederaziun svizra<br>Schweizerische Eidgenossenschaft<br>Switzerland|
 image_flag           = Switzerland_flag_300.png |
 image_coat           = Coat of Arms of Switzerland.svg |
 image_map            = LocationSwitzerland.png |
