*Empty MediaWiki Message*

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -1,6 +1,6 @@
 {{Infobox Esé|
 nkómbó 			= Republiki ya Kɔ́ngɔ Demokratiki|
-nkómbó_na_lokóta	= République Démocratique du Congo<br /> Repubilika ya Kongo Demokratika <br /> Jamhuri ya Kidemokrasia ya Kongo   <br /> Ditunga dia Kongu wa Mungalaata'''|
+nkómbó_na_lokótá	= République Démocratique du Congo<br /> Repubilika ya Kongo Demokratika <br /> Jamhuri ya Kidemokrasia ya Kongo   <br /> Ditunga dia Kongu wa Mungalaata'''|
 image_flag 		= Flag of the Democratic Republic of the Congo.svg |
 image_coat 		= Armoiries de la République démocratique du Congo - 2006.png |
 image_map 		= LocationDRCongo.png |
