*Empty MediaWiki Message*

--- a/Ingɛlɛ́tɛlɛ.mw
+++ b/Ingɛlɛ́tɛlɛ.mw
@@ -3,7 +3,7 @@
 '''Ingɛlɛ́tɛlɛ''' ezalí Lisangá ya Mani ya Britania Monɛ́nɛ mpé Irlandí ya Likólo. Mani ya Ingɛlɛ́tɛlɛ ezalí [[Elizabeth II]]. Mbóka-mokonzi ezalí [[Londoni]].
 
 {{Infobox Esé|
-nkómbó_na_lokóta = United Kingdom of Great Britain and Northern Ireland |
+nkómbó_na_lokótá = United Kingdom of Great Britain and Northern Ireland |
 nkómbó = Ingɛlɛ́tɛlɛ |
 image_flag = uk flag large.png |
 image_coat = UK_Royal_Coat_of_Arms.png |
