*Empty MediaWiki Message*

--- a/Ingɛlandi.mw
+++ b/Ingɛlandi.mw
@@ -1,7 +1,7 @@
 {{ndámbo}}
 
 {{Infobox Esé|
-nkómbó_na_lokóta = England |
+nkómbó_na_lokótá = England |
 nkómbó = Ingɛlandi |
 image_flag = Flag_of_England.svg|170px|
 image_coat = England.gif|100px|
