*Empty MediaWiki Message*

--- a/Kongó-Brazzaville.mw
+++ b/Kongó-Brazzaville.mw
@@ -1,6 +1,6 @@
 {{Infobox Esé|
 nkómbó 			= Republiki ya Kɔ́ngɔ|
-nkómbó_na_lokóta	= République du Congo|
+nkómbó_na_lokótá	= République du Congo|
 image_flag 		= Flag_of_the_Republic_of_the_Congo.svg |
 image_coat 		= Congo_rep_coa.png |
 image_map 		= LocationRCongo.png |
