--- a/Alémani.mw
+++ b/Alémani.mw
@@ -1,6 +1,6 @@
 {{infobox_Esé|
 nkómbó               = Rebubliki Fedelali ya Alémani |
-nkómbó_na_lokóta     = Bundesrepublik Deutschland |
+nkómbó_na_lokótá     = Bundesrepublik Deutschland |
 image_flag           = Flag of Germany.svg|140px |
 image_coat           = Coat of Arms of Germany.svg|85px |
 image_map            = LocationGermanyInEurope.png|none|320px |
