*Empty MediaWiki Message*

--- a/Lokótá.mw
+++ b/Lokótá.mw
@@ -1,5 +1,5 @@
-[[Image:Spraakfamiliar.png|thumb]] 
-[[Image:Afro-Asiatic.png|thumb]] 
+[[Image:Spraakfamiliar.png|thumb|Nkótá ya Mokili]] 
+[[Image:Afro-Asiatic.png|thumb|Nkótá ya Afrika]] 
 
 '''Lokótá''' ezalí [[likokí]] ya kosála [[monɔkɔ]] mpɔ́ na bolobani na [[moto]] na moto.
 {{ndámbo}}
@@ -22,7 +22,7 @@ Comment améliorer un article sur une langue?
 >> voir come exemple en anglais: http://en.wikipedia.org/wiki/Lingala_language 
 >> voir come exemple en alémanique: http://als.wikipedia.org/wiki/Lingala
 ----
-== Nkótá ya Congo ==
+== Nkótá ya Kɔ́ngɔ ==
 Cette liste temporaire vous permet l'accès aux articles suivants pour les créer ou les améliorer. Elle sera effacé le moment donné.
 
 * [[lingála]] 
@@ -30,7 +30,6 @@ Cette liste temporaire vous permet l'accès aux articles suivants pour les crée
 * [[kiswahili]]
 * [[ciluba]]
 * [[lifalansé]]
-* [[lingɛlɛsi]]
 
 == Nkótá ya Mokili ==
 
