[[es:La Gombe (Kinshasa)]]

--- a/Gombe_(Kinsásá).mw
+++ b/Gombe_(Kinsásá).mw
@@ -40,5 +40,7 @@ Sites de quelques institutions établie à Gombe
 [[Category:Bakomini ya Kinshasa]]
 
 {{CommunesKinshasa}}
+
+[[es:La Gombe (Kinshasa)]]
 [[fr:La Gombe (Kinshasa)]]
 [[en:La Gombe (Kinshasa)]]
