*Empty MediaWiki Message*

--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -500,6 +500,7 @@ __NOTOC__
 
 [[Category:Almwali]]
 
+[[de:Liste der Nationalwappen]]
 [[en:Gallery of sovereign state coats of arms]]
 [[es:Galería de escudos de estados soberanos]]
 [[fr:Galerie des emblèmes des pays du monde]]
