robot  Ajoute: cy, el, eu, ga, is, tl

--- a/Demokrasi.mw
+++ b/Demokrasi.mw
@@ -22,21 +22,26 @@ Demokrasi ezalí bobɛ́lɛ́ loléngé ya koyángela tɛ́, kasi mpé mabɔngí
 [[bs:Demokracija]]
 [[ca:Democràcia]]
 [[cs:Demokracie]]
+[[cy:Democratiaeth]]
 [[da:Demokrati]]
 [[de:Demokratie]]
+[[el:Δημοκρατία]]
 [[en:Democracy]]
 [[eo:Demokratio]]
 [[es:Democracia]]
 [[et:Demokraatia]]
+[[eu:Demokrazia]]
 [[fa:دموکراسی]]
 [[fi:Demokratia]]
 [[fr:Démocratie]]
+[[ga:Daonlathas]]
 [[gl:Democracia]]
 [[he:דמוקרטיה]]
 [[hr:Demokracija]]
 [[ht:Demokrasi]]
 [[hu:Demokrácia]]
 [[id:Demokrasi]]
+[[is:Lýðræði]]
 [[it:Democrazia]]
 [[ja:民主主義]]
 [[ka:დემოკრატია]]
@@ -59,6 +64,7 @@ Demokrasi ezalí bobɛ́lɛ́ loléngé ya koyángela tɛ́, kasi mpé mabɔngí
 [[sl:Demokracija]]
 [[sv:Demokrati]]
 [[th:ประชาธิปไตย]]
+[[tl:Demokrasya]]
 [[tr:Demokrasi]]
 [[uk:Демократія]]
 [[vi:Dân chủ]]
