*Empty MediaWiki Message*

--- a/Justine_Kitubu_Kamanda.mw
+++ b/Justine_Kitubu_Kamanda.mw
@@ -1,4 +1,4 @@
-'''Justine Kitubu Kamanda''' azali [[bourgemestre]] ya [[La Gombe (Kinshasa)|La Gombe]]. Bonakiye na mokoloya [[8 yuli]] [[2005]] na [[Joseph Kabila]]. 
+'''Justine {{smcp|Kitubu}} Kamanda''' azali [[bourgemestre]] ya [[La Gombe (Kinshasa)|La Gombe]]. Bonakiye na mokoloya [[8 yuli]] [[2005]] na [[Joseph Kabila]]. 
 
 {{ndámbo}}
 [[Category:Moto wa politiki ya Kinsásá]]
