*Empty MediaWiki Message*

--- a/Marie-Antoinette_Makayabu.mw
+++ b/Marie-Antoinette_Makayabu.mw
@@ -1,4 +1,4 @@
-'''Marie-Antoinette Makayuba''' azali [[bourgemestre]] ya [[Bandalungwa]]. Bonakiye na mokoloya [[8 yuli]] [[2005]] na [[Joseph Kabila]]. 
+'''Marie-Antoinette {{smcp|Makayuba}}''' azali [[bourgemestre]] ya [[Bandalungwa]]. Bonakiye na mokoloya [[8 yuli]] [[2005]] na [[Joseph Kabila]]. 
 
 {{ndámbo}}
 [[Category:Moto wa politiki ya Kinsásá]]
