robot  Ajoute: af, br, hr, uk Modifie: gd

--- a/Ekólo_Wali.mw
+++ b/Ekólo_Wali.mw
@@ -2,9 +2,11 @@
 {{UK}}
 [[category:Ingɛlɛ́tɛlɛ]]
 
+[[af:Wallis]]
 [[als:Wales]]
 [[ar:ويلز]]
 [[bg:Уелс]]
+[[br:Kembre]]
 [[ca:Gal·les]]
 [[cs:Wales]]
 [[cy:Cymru]]
@@ -18,9 +20,10 @@
 [[fi:Wales]]
 [[fr:Pays de Galles]]
 [[ga:An Bhreatain Bheag]]
-[[gd:A'Chuimrigh]]
+[[gd:A' Chuimrigh]]
 [[gl:Gales - Cymru]]
 [[he:ויילס]]
+[[hr:Wales]]
 [[ht:Gal]]
 [[hu:Wales]]
 [[id:Wales]]
@@ -52,5 +55,6 @@
 [[sv:Wales]]
 [[th:เวลส์]]
 [[tr:Galler]]
+[[uk:Вельс]]
 [[zh:威爾士]]
 [[zh-min-nan:Cymru]]
