/* V */ remplacement d'image non libre avec image libre

--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -471,7 +471,7 @@ __NOTOC__
 |-
 | [[Vatican City]] || [[Image:Vatican_coa.png|120px]]
 |-
-| [[Venezuela]] || [[Image:Venezuela_coa.png|120px]]
+| [[Venezuela]] || [[Image:Emblem of the Papacy.svg|120px]]
 |-
 | [[Vietnami]] || [[Image:Viet-coa.PNG|120px]]
 |-
