--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -455,7 +455,7 @@ __NOTOC__
 |-
 | [[United Arab Emirates]] || [[Image:NationalArmsofUAE.png|120px]]
 |-
-| [[United Kingdom]] || [[Image:UK_Royal_Coat_of_Arms.png|120px]]
+| [[United Kingdom]] || [[image:Coat of arms of the United Kingdom.png|120px]]
 |-
 | [[United States]] || [[Image:Great Seal of the US.png|120px|Great Seal of the U.S.]]
 |-
