robot  Ajoute: bn, scn, zh-min-nan, zh-yue

--- a/Atome.mw
+++ b/Atome.mw
@@ -9,6 +9,7 @@ Kasi atome ezalí mpé na biténi na yangó. Biténi yangó ebengamí : [[elékt
 [[ar:ذرة]]
 [[ast:Átomu]]
 [[bg:Атом]]
+[[bn:পরমাণু]]
 [[br:Atom]]
 [[bs:Atom]]
 [[bug:Atong]]
@@ -54,6 +55,7 @@ Kasi atome ezalí mpé na biténi na yangó. Biténi yangó ebengamí : [[elékt
 [[pt:Átomo]]
 [[ro:Atom]]
 [[ru:Атом]]
+[[scn:Àtumu]]
 [[sh:Atom]]
 [[simple:Atom]]
 [[sk:Atóm]]
@@ -69,3 +71,5 @@ Kasi atome ezalí mpé na biténi na yangó. Biténi yangó ebengamí : [[elékt
 [[vi:Nguyên tử]]
 [[yi:אטאם]]
 [[zh:原子]]
+[[zh-min-nan:Goân-chú]]
+[[zh-yue:原子]]
