robot  Ajoute: lmo, sh, vec

--- a/Falansia.mw
+++ b/Falansia.mw
@@ -106,6 +106,7 @@ footnotes 	= [[Image:france cities.png|290px]]
 [[lad:Fransia]]
 [[lb:Frankräich]]
 [[li:Frankriek]]
+[[lmo:Francja]]
 [[lt:Prancūzija]]
 [[lv:Francija]]
 [[mg:Frantsa]]
@@ -134,6 +135,7 @@ footnotes 	= [[Image:france cities.png|290px]]
 [[sc:Frantza]]
 [[scn:Francia]]
 [[sco:Fraunce]]
+[[sh:Francuska]]
 [[simple:France]]
 [[sk:Francúzsko]]
 [[sl:Francija]]
@@ -152,6 +154,7 @@ footnotes 	= [[Image:france cities.png|290px]]
 [[ug:فرانسىيە]]
 [[uk:Франція]]
 [[ur:فرانس]]
+[[vec:Franzsa]]
 [[vi:Pháp]]
 [[zh:法国]]
 [[zh-min-nan:Hoat-kok]]
