robot  Ajoute: gv, sh, vec

--- a/Kémi.mw
+++ b/Kémi.mw
@@ -45,6 +45,7 @@ Ndakisa : [[mokokano]] ya kosala [[mái]]
 [[ga:Ceimic]]
 [[gd:Duileolachd]]
 [[gl:Química]]
+[[gv:Kemmig]]
 [[he:כימיה]]
 [[hi:रसायन शास्त्र]]
 [[hr:Kemija]]
@@ -88,6 +89,7 @@ Ndakisa : [[mokokano]] ya kosala [[mái]]
 [[sc:Chìmica]]
 [[scn:Chìmica]]
 [[sco:Chemistry]]
+[[sh:Kemija]]
 [[simple:Chemistry]]
 [[sk:Chémia]]
 [[sl:Kemija]]
@@ -105,6 +107,7 @@ Ndakisa : [[mokokano]] ya kosala [[mái]]
 [[tt:Ximiä]]
 [[ug:خىمىيە]]
 [[uk:Хімія]]
+[[vec:Chimèga]]
 [[vi:Hóa học]]
 [[vo:Kiemav]]
 [[zh:化学]]
