robot  Ajoute: fy, mg, pap Modifie: mr

--- a/Wikipedia.mw
+++ b/Wikipedia.mw
@@ -43,6 +43,7 @@ Wikipedia eza [[ensyclopedie]] óyo. Bato batangaka ngo bakomaka ngo.
 [[fr:Wikipédia]]
 [[frp:Vuiquipèdia]]
 [[fur:Vichipedie]]
+[[fy:Wikipedy]]
 [[ga:Vicipéid]]
 [[gd:Wikipedia]]
 [[gl:Wikipedia]]
@@ -76,11 +77,12 @@ Wikipedia eza [[ensyclopedie]] óyo. Bato batangaka ngo bakomaka ngo.
 [[lmo:Wikipedia]]
 [[lt:Vikipedija]]
 [[lv:Vikipēdija]]
+[[mg:Wikipedia]]
 [[mi:Wikipedia]]
 [[mk:Википедија]]
 [[ml:വിക്കിപീഡിയ]]
 [[mo:Википедия]]
-[[mr:विकिपीडिआ]]
+[[mr:विकिपिडीया]]
 [[ms:Wikipedia]]
 [[mt:Wikipedija]]
 [[na:Wikipedia]]
@@ -94,6 +96,7 @@ Wikipedia eza [[ensyclopedie]] óyo. Bato batangaka ngo bakomaka ngo.
 [[nrm:Viqùipédie]]
 [[oc:Oiquipedià]]
 [[os:Википеди]]
+[[pap:Wikipedia]]
 [[pl:Wikipedia]]
 [[pt:Wikipédia]]
 [[qu:Wikipidiya]]
