robot  Ajoute: cv, fur, ne, ps

--- a/Swisi.mw
+++ b/Swisi.mw
@@ -65,6 +65,7 @@ footnotes     = |
 [[bs:Švicarska]]
 [[ca:Suïssa]]
 [[cs:Švýcarsko]]
+[[cv:Швейцари]]
 [[cy:Y Swistir]]
 [[da:Schweiz]]
 [[de:Schweiz]]
@@ -79,6 +80,7 @@ footnotes     = |
 [[fo:Sveis]]
 [[fr:Suisse]]
 [[frp:Suisse]]
+[[fur:Svuizare]]
 [[fy:Switserlân]]
 [[ga:An Eilvéis]]
 [[gd:An Eilbheis]]
@@ -109,12 +111,14 @@ footnotes     = |
 [[nap:Sguizzera]]
 [[nds:Swiez]]
 [[nds-nl:Zwitserlaand]]
+[[ne:स्वीट्जरल्याण्ड]]
 [[nl:Zwitserland]]
 [[nn:Sveits]]
 [[no:Sveits]]
 [[oc:Soïssa]]
 [[pdc:Schweiz]]
 [[pl:Szwajcaria]]
+[[ps:سويس]]
 [[pt:Suíça]]
 [[rm:Svizra]]
 [[ro:Elveţia]]
