/* Bitúká bya Kɔ́ngɔ */

--- a/Kongó-Brazzaville.mw
+++ b/Kongó-Brazzaville.mw
@@ -59,7 +59,7 @@ Ekakoli ya molayi: [[Bitúká bya Kɔ́ngɔ]]
 *[[Pool Region|Pool]] ([[Kinkala]])
 *[[Sangha Region|Sangha]] ([[Ouésso]])
 
-* [[Brazzaville]], the national capital, is a commune within a capital district.
+* [[Brazzaville]], mbóka-mokonzi, ezalí ''commune'' o káti ya district-mokonzi.
 
 <!-->These regions are subdivided into<!--> 46 [[Bitúká bya Kɔ́ngɔ|districts]].
 
