/* Bitúká bya Kɔ́ngɔ */

--- a/Kongó-Brazzaville.mw
+++ b/Kongó-Brazzaville.mw
@@ -46,7 +46,7 @@ footnotes 	= [[Image:congo republic sm04.png|290px]] Republiki ya Kɔ́ngɔ.|
 ==Bato ==
 [[Image:Congo-Rep-demography.png|left|600px|center|***Évolution de la démographie entre 1961 et 2003 (chiffre de la [[Organisation des Nations unies pour l'alimentation et l'agriculture|FAO]], 2005). Population en milliers d'habitants.]]
 ==Bitúká bya Kɔ́ngɔ ==
-[[Image:Congo_regions_named.png|right|Kálati ya bitúká bya Republiki ya Kɔ́ngɔ.<-->]]
+[[Image:Congo_regions_named.png|thumb|right|Kálati ya bitúká bya Republiki ya Kɔ́ngɔ.<-->]]
 Ekakoli ya molayi: [[Bitúká bya Kɔ́ngɔ]]
 *[[Bouenza Region|Bouenza]] ([[Madingou]])
 *[[Cuvette Region|Cuvette]] ([[Owando]])
