--- a/Ndáko_ya_bokɔnɔ.mw
+++ b/Ndáko_ya_bokɔnɔ.mw
@@ -6,6 +6,7 @@ Soki biloko ya [[doktolo]] ezali kobikisa yo te, to ozali na posa ya biloko elek
 [[Category:Móngana]]
 [[Category:Nzoto kolongono]]
 
+[[bg:Болница]]
 [[cs:Nemocnice]]
 [[da:Hospital]]
 [[de:Krankenhaus]]
@@ -20,12 +21,16 @@ Soki biloko ya [[doktolo]] ezali kobikisa yo te, to ozali na posa ya biloko elek
 [[it:Ospedale]]
 [[ja:病院]]
 [[ko:병원]]
+[[mg:Hopitaly]]
+[[ms:Hospital]]
 [[nl:Ziekenhuis]]
 [[nn:Sjukehus]]
 [[no:Sykehus]]
 [[pl:Szpital]]
 [[pt:Hospital]]
+[[ru:Больница]]
 [[simple:Hospital]]
 [[sl:Bolnišnica]]
 [[sv:Sjukhus]]
+[[uk:Шпиталь]]
 [[zh:醫院]]
