--- a/Kongó-Brazzaville.mw
+++ b/Kongó-Brazzaville.mw
@@ -109,6 +109,7 @@ Ekakoli ya molayi: [[Bitúká bya Kɔ́ngɔ]]
 [[nl:Republiek Congo]]
 [[nn:Kongo-Brazzaville]]
 [[no:Republikken Kongo]]
+[[pam:Republic of the Congo]]
 [[pl:Republika Konga]]
 [[pt:Congo]]
 [[ru:Конго, Народная Республика]]
