*Empty MediaWiki Message*

--- a/Joseph_Kabila.mw
+++ b/Joseph_Kabila.mw
@@ -17,6 +17,8 @@ Kabila abundaki na mapinzo ya barebɛl ya tata wa ye, nà bitumba oyo ememaki wa
 == Nkásá olibanda Wikipedia ==
 * [http://news.bbc.co.uk/1/hi/world/africa/country_profiles/1076399.stm BBC Country Profile]*
 
+{{Mokonzi wa ekólo}}
+
 [[de:Joseph Kabila]]
 [[en:Joseph Kabila]]
 [[es:Joseph Kabila]]
