*Empty MediaWiki Message*

--- a/Laurent-Désiré_Kabila.mw
+++ b/Laurent-Désiré_Kabila.mw
@@ -6,6 +6,7 @@
 
 == Tála mpé ==
 * [[Bakambi ekólo Kɔ́ngɔ-Kinshasa]]
+{{Mokonzi wa ekólo}}
 
 [[category:Moto wa politiki ya Kɔ́ngɔ Demokratiki]]
 [[Category:Tatá-mokonzi ya Kɔ́ngɔ Demokratiki]]
