*Empty MediaWiki Message*

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -40,7 +40,7 @@ calling_code	= 243|
 footnotes 	= [[Image:Cg-map.png|290px]]|
 }}
 
-'''Republiki ya Kɔ́ngɔ Demokratiki''' ezwami na ndelo ya ye ya mwa [[sánzá ya motóbá mikɔlɔ 30]] [[1960]], ekolo ya makoki, lipanda, bonsomi, ekangani mpe ekabwani te, ya bato, ya bokonzi bouti na bato mpe eponi eyamba yoko te.
+'''Republiki ya Kɔ́ngɔ Demokratiki''' ezalí [[esé]] ya káti ya [[Afríka]], ezwamí na ndelo ya ye ya mwa [[sánzá ya motóbá mikɔlɔ 30]] [[1960]], ekólo ya makokí, lipanda, bonsɔ́mí, ekanganí mpé ekabwaní tɛ́, ya bato, ya bokonzi boutí na bato mpé eponi eyamba yɔ̂kɔ tɛ́.
 
 == Lokótá ==
 
