/* [[wikipédia:Liens externes|Mankásá o libándá]] */

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -303,7 +303,7 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 * [[Category:Kɔ́ngɔ-Kinshasa]]
 <br clear="all"/>
 
-== [[wikipédia:Liens externes|Mankásá o libándá]] ==
+== [[Mankásá o libándá]] ==
 {{wikitravel|la République démocratique du Congo|République_démocratique_du_Congo}}
 * [http://www.stiopka.com/congoclic/congoclic.html Carte du Congo (1958)]
 * [http://www.amnestyinternational.be/doc/rubrique44.html Informations d'Amnesty International]
