--- a/Mobutu_Sese_Seko.mw
+++ b/Mobutu_Sese_Seko.mw
@@ -1,6 +1,8 @@
 [[Image:Mobutu Sese Seko 1973.jpg|thumb|right|Joseph-Désiré Mobutu (-1971) / Mobutu Sese Seko]]
 '''{{smcp|Mobutu}} Sese Seko''', abótámí o [[Lisála]], Mbánzá ya Mambénga, o [[mokɔlɔ ya 14 ya sánzá zómí]] o [[mobú 1930]], akúfí o [[Rabat]], [[Maroc]], o [[mokɔlɔ ya 7 ya sánzá ya libwa]] o [[mobú 1997]]. Mobutu ezalákí [[Tatá-mokonzi]] ya [[Kɔ́ngɔ Demokratiki]].
 
+Mobutu akamataki bokonzi na makási na [[1965]].
+
 [[category:Moto wa politiki ya Kɔ́ngɔ Demokratiki]]
 [[Category:Tatá-mokonzi ya Kɔ́ngɔ Demokratiki]]
 
@@ -26,4 +28,3 @@
 [[ro:Mobutu Sese Seko]]
 [[ru:Мобуту Сесе Секо]]
 [[sv:Mobutu Sese Seko]]
-akamataki bokonzi na makasi na 1965
