/* Mankasa olibanda Wikipedia */

--- a/Ciluba.mw
+++ b/Ciluba.mw
@@ -103,6 +103,7 @@ Some short examples of the language in the writing system(s) used to write the l
 
 
 == Mankasa olibanda Wikipedia ==
+* [http://www.ciyem.ugent.be/ Dictionnaire Cilubà - Français]
 * {{fr}} [http://cric.populus.org/ Centre de Recherche pour l'Instrumentalisation du Ciluba]
 * {{en}} [http://www.ethnologue.com/show_language.asp?code=LUB Ethnologue report on Tshiluba]
 * {{en}} [http://news.bbc.co.uk/2/hi/africa/3830521.stm BBC News: Congo word "most untranslatable"]
