*Empty MediaWiki Message*

--- a/Falansia.mw
+++ b/Falansia.mw
@@ -46,7 +46,7 @@ footnotes 	= [[Image:france cities.png|290px]]
 
 [[Category:Esé]]
 [[Category:Bisé ya Eropa]]
-[[Category:Falansia]]
+[[Category:Falansia|*]]
 
 [[af:Frankryk]]
 [[als:Frankreich]]
