*Empty MediaWiki Message*

--- a/Lokásá_ya_libosó.mw
+++ b/Lokásá_ya_libosó.mw
@@ -33,6 +33,6 @@
 
 <!-- langues administratifs -- administratif languages -->
 <!-- nl = flamand (Congo Belge) -- nl = flemish (Belgian Congo) -->
-[[ar:]] [[fr:]] [[en:]] [[simple:]] [[es:]] [[nl:]] [[pt:]]
+[[ar:]] [[fr:]] [[en:]] [[simple:]] [[es:]] [[fi]] [[nl:]] [[pt:]]
 
 __NOTOC__
