*Empty MediaWiki Message*

--- a/Ekwatéli.mw
+++ b/Ekwatéli.mw
@@ -9,3 +9,5 @@ Ekwatéli ezali nkombo elakisi biloko mingi:
 '''-[[Ekwatéli (mokili)|Ekwatéli]]''' ezali eloko oyo bato bakelaki pona kokata mokili o bakarta ya jyografi, na biteni mibale, moko o likolo to mpe na Nor, moko na se to mpe na Sud. '''Ekolo Ekwatéli''', mpe bituka ya Ekwateli ya bikolo mingi na mokili, bazali na nkombo wana mpo ba kutanemi esika '''[[Ekwatéli (mokili)|ekwatéli]]''' elekí na karta ya mokili.
 
 {{Bokokani}}
+
+[[en:Equator]]
