--- a/Denis_Sassou_N’Guesso.mw
+++ b/Denis_Sassou_N’Guesso.mw
@@ -2,3 +2,16 @@
 
 {{ndámbo}}
 [[Category:Kɔ́ngɔ-Brazzaville]]
+[[ar:ديني ساسو نغيسو]]
+[[de:Denis Sassou-Nguesso]]
+[[en:Denis Sassou-Nguesso]]
+[[fr:Denis Sassou-Nguesso]]
+[[gl:Dennis Sassou-Nguesso]]
+[[id:Denis Sassou-Nguesso]]
+[[hu:Denis Sassou-Nguesso]]
+[[nl:Dennis Sassou-Nguesso]]
+[[ja:ドニ・サスヌゲソ]]
+[[no:Denis Sassou-Nguesso]]
+[[pl:Denis Sassou-Nguesso]]
+[[pt:Denis Sassou-Nguesso]]
+[[zh:德尼·萨苏-恩格索]]
