--- a/Denis_Sassou_N’Guesso.mw
+++ b/Denis_Sassou_N’Guesso.mw
@@ -1,3 +1,4 @@
+[[Image:Denis Sassou Nguesso, G8.jpg|right|200px|Denis Sassou N’Guesso, G8]]
 '''Denis {{smcp|Sassou}} N’Guesso''' ('''Deni {{smcp|Sasu}} N’Gweso''' na lokóta ya [[lingála]]) ezalí [[Mokambi-Ekólo]] na [[Kɔ́ngɔ-Brazzaville]].
 
 {{ndámbo}}
