--- a/Mobutu_Sese_Seko.mw
+++ b/Mobutu_Sese_Seko.mw
@@ -8,6 +8,11 @@ Mobutu akamataki bokonzi na makási na [[1965]].
 
 {{ndámbo}}
 
+Azali mutu oyo atiki mboka ya Congo na pasi, soki lelo mubulu ezali kaka kuna pamba te ye nde mutu atika tango.
+Azali na ki bokinzi 35 mbula akonga ata eloko te, ba nzela kaka oyo ba Belge batikila biso.
+Soki ye vraiment azalaki ba yele lelo R.D.Congo elingaki kokota mobulu te.
+ 
+
 ==Tála mpé==
 * [[Bakambi ekólo Kɔ́ngɔ-Kinshasa]]
 {{Mokonzi wa ekólo}}
