--- a/Mobutu_Sese_Seko.mw
+++ b/Mobutu_Sese_Seko.mw
@@ -3,19 +3,18 @@
 
 Mobutu akamataki bokonzi na makási na [[1965]].
 
-[[category:Moto wa politiki ya Kɔ́ngɔ Demokratiki]]
-[[Category:Tatá-mokonzi ya Kɔ́ngɔ Demokratiki]]
-
-{{ndámbo}}
-
-Azali mutu oyo atiki mboka ya Congo na pasi, soki lelo mubulu ezali kaka kuna pamba te ye nde mutu atika tango.
+Azali mutu oyo atiki mboka ya Kɔ́ngɔ na pasi, soki lelo mubulu ezali kaka kuna pamba te ye nde mutu atika tango.
 Azali na ki bokinzi 35 mbula akonga ata eloko te, ba nzela kaka oyo ba Belge batikila biso.
-Soki ye vraiment azalaki ba yele lelo R.D.Congo elingaki kokota mobulu te.
+Soki ye vraiment azalaki ba yele lelo Republiki ya Kɔ́ngɔ Demokratiki elingaki kokota mobulu te.
  
-
 ==Tála mpé==
 * [[Bakambi ekólo Kɔ́ngɔ-Kinshasa]]
+
+{{ndámbo}}
 {{Mokonzi wa ekólo}}
+
+[[category:Moto wa politiki ya Kɔ́ngɔ Demokratiki]]
+[[Category:Tatá-mokonzi ya Kɔ́ngɔ Demokratiki]]
 
 [[de:Mobutu Sese Seko]]
 [[en:Mobutu Sese Seko]]
