*Empty MediaWiki Message*

--- a/Mobutu_Sese_Seko.mw
+++ b/Mobutu_Sese_Seko.mw
@@ -1,11 +1,11 @@
 [[Image:Mobutu Sese Seko 1973.jpg|thumb|right|Joseph-Désiré Mobutu (-1971) / Mobutu Sese Seko]]
 '''{{smcp|Mobutu}} Sese Seko''', abótámí o [[Lisála]], Mbánzá ya Mambénga, o [[mokɔlɔ ya 14 ya sánzá zómí]] o [[mobú 1930]], akúfí o [[Rabat]], [[Maroc]], o [[mokɔlɔ ya 7 ya sánzá ya libwa]] o [[mobú 1997]]. Mobutu ezalákí [[Tatá-mokonzi]] ya [[Kɔ́ngɔ Demokratiki]].
 
-Mobutu akamataki bokonzi na makási na [[1965]].
+Mobutu akamatákí bokonzi na makási na [[1965]].
 
-Azali mutu oyo atiki mboka ya Kɔ́ngɔ na pasi, soki lelo mubulu ezali kaka kuna pamba te ye nde mutu atika tango.
-Azali na ki bokinzi 35 mbula akonga ata eloko te, ba nzela kaka oyo ba Belge batikila biso.
-Soki ye vraiment azalaki ba yele lelo Republiki ya Kɔ́ngɔ Demokratiki elingaki kokota mobulu te.
+Azalí moto óyo atíkí mbóka ya Kɔ́ngɔ na mpási, sɔ́kí lɛlɔ́ mobúlú ezalí káka kúna mpámba tɛ́ yě ndé moto atíka ntángo.
+Azalí na bokonzi mbúla 35 akongá atá elɔ́kɔ tɛ́, ba nzéla káka óyo [[Bɛ́lɛjika|Babɛ́lɛji]] batikílá bisó.
+Sɔ́kí yě mpenzá azalákí mayɛ́lɛ lɛlɔ́ Republiki ya Kɔ́ngɔ Demokratiki elingaki kokɔ́ta mobúlú tɛ́.
  
 ==Tála mpé==
 * [[Bakambi ekólo Kɔ́ngɔ-Kinshasa]]
