*Empty MediaWiki Message*

--- a/Radio_Okapi.mw
+++ b/Radio_Okapi.mw
@@ -1,12 +1,10 @@
 [[Image:Congo-langues.gif|thumb|Radio Okapi]]
-
-{{ndámbo}}
-
-'''Radio Okapi''' ezalí radio na [[MONUC]] o Ekólo [[Kɔ́ngɔ-Kinshasa]].
+'''Radio Okapi''' ezalí radio na [[MONUC]] o Ekɔ́lɔ [[Kɔ́ngɔ-Kinshasa]].
 
 ==Tála mpé==
 === Mankásá o libándá ===
 * [http://www.radiookapi.net/ Radio Okapi]
 
+{{ndámbo}}
 [[Category:Radio]]
 [[fr:Radio Okapi]]
