*Empty MediaWiki Message*

--- a/Batu_ya_linete.mw
+++ b/Batu_ya_linete.mw
@@ -1,4 +1,4 @@
-'''Batu ya linete''' bamekaka miso nayo mpe koyebisa yo oyo linete ekoki nayo. Bango mpe
+'''Batu ya linete''' bamekaka miso nayo mpé koyebisa yo oyo linete ekoki nayo. Bango mpé
 balukaka maladi ya minene ya miso lokola 'glaucoma'.
 
 [[category:maladi]]
