--- a/Kapɔ́ti.mw
+++ b/Kapɔ́ti.mw
@@ -3,20 +3,20 @@
 [[image:Condoms by Morrhigan.jpg|thumb|Ekopikesa]]
 [[category:Móngana]]
 [[category:sida]]
-[[Ekopekisa (Ndenge)|Ndenge ya kolata mpe kosalela ekanga]]
+[[Ekopekisa (Ndenge)|Ndenge ya kolata mpé kosalela ekanga]]
 
 
 
 Ntango ya botamboli ya mwasi na mobali: Kaka nde ekanga ekoki '''ekopekisa''' ngenge ya sida. Tokoki kosomba ebateli na bisika biyike: esika batekaka nkisi, makaya masanga.
 
-Ebateli ekopekisa nzoto na biso ekoto ngenge ya [[sida]], mpe ezwa [[bokɔnɔ]] boye bozwamaka ya mwasi na mobali. Ebateli ekopekisa mpe mwasi azwa zemi ntango alingi te.
+Ebateli ekopekisa nzoto na biso ekoto ngenge ya [[sida]], mpé ezwa [[bokɔnɔ]] boye bozwamaka ya mwasi na mobali. Ebateli ekopekisa mpé mwasi azwa zemi ntango alingi te.
 
 '''Bolamu bwa ekanga bozali na tembe te.'''
 
 Ebateli moko okolata yango kaka mbala moko. Tanga malamu mpe landa mibeko mpo ya kosalela yango.
 
 ==Voir aussi==
-* [[Ekopekisa (Ndenge)|Ndenge ya kolata mpe kosalela ekanga]]
+* [[Ekopekisa (Ndenge)|Ndenge ya kolata mpé kosalela ekanga]]
 * [[Nzela ya kopekisa zemi]]
 
 [[cs:Kondom]]
