*Empty MediaWiki Message*

--- a/Mobéko-likonzi_mwa_sika_(Kongó-Kinsásá).mw
+++ b/Mobéko-likonzi_mwa_sika_(Kongó-Kinsásá).mw
@@ -2,20 +2,20 @@
 
 '''Mobeko Likonzi mwa sika (2006)''' ya [[Repubiliki ya Kɔ́ngɔ Demokratiki]] moye mondimami, motali makambo manene maye: 
 
-==Mabi matali ekolo mpe bokonzi==
-Mpo ya kolendisa bomoko bwa Ekolo boye bobebi na bitumba ndenge na ndenge mpe mpo ya kotonga bisika bia bwanya mpe bya botomboli mboka ike, bantoma bakaboli ekolo Kongo na bingumba 25, bakisa engumba ya [[Kinshasa]], binso biye bizali na makoki ma komiyangela eyebani na mobeko mpe kosala misala milongobani mitangemi na [[Mobeko Likonzi]] moye. Na botali makoki mana, bingumba bikosala misala misusu misengeli kosalema na Mbula Matari ya Ekolo, mpe kokabola misolo miyingeli na sanduku ya Ekolo na Mbula Matari zambi ya eteni ntuku minei likolo ya mokama (40%) mpo ya bingumba, mpe eteni ntuku motoba likolo ya mokama (60%) mpo ya Mbula Matari. Soki boyokani bozangi na esaleli kati ya [[Mbula Matari]] ya ekolo mpe bingumba, Ndako ya basambisi ba Mobeko Likonzi yango moko ezali na bokonzi bwa kobongisa likambo lina.
+==Mabi matali ekolo mpé bokonzi==
+Mpo ya kolendisa bomoko bwa Ekolo boye bobebi na bitumba ndenge na ndenge mpé mpo ya kotonga bisika bia bwanya mpé bya botomboli mboka ike, bantoma bakaboli ekolo Kongo na bingumba 25, bakisa engumba ya [[Kinshasa]], binso biye bizali na makoki ma komiyangela eyebani na mobeko mpé kosala misala milongobani mitangemi na [[Mobeko Likonzi]] moye. Na botali makoki mana, bingumba bikosala misala misusu misengeli kosalema na Mbula Matari ya Ekolo, mpé kokabola misolo miyingeli na sanduku ya Ekolo na Mbula Matari zambi ya eteni ntuku minei likolo ya mokama (40%) mpo ya bingumba, mpé eteni ntuku motoba likolo ya mokama (60%) mpo ya Mbula Matari. Soki boyokani bozangi na esaleli kati ya [[Mbula Matari]] ya ekolo mpé bingumba, Ndako ya basambisi ba Mobeko Likonzi yango moko ezali na bokonzi bwa kobongisa likambo lina.
 
-Na yango, bingumba bya ekolo bikonzami na Mbula Matari mpe [[Lingomba lya Bantoma]] ba bingumba. Engumba yoko yoko ezali na bituka bikonzami yango moko lokola vili, komine, seketele mpe sefeli. Lisusu, Mobeko Likonzi moye mondimi makanisi ma bonsomi mpe molobi: bokonzi bonso bouti na bana-ekolo mpo bango nde ntina ya ebandeli ya bokonzi. Bana-ekolo bakopesa makanisi ma bango na kati ya mangomba mayike ma politiki, maye mabatelami na Mobeko Likonzi moye mondimi ete kosala lingomba lya politiki se moko ezali lokola kobuka mobeko mwa koteka ekolo. Na maye matali bonsomi bwa ekolo, basali mibeko bandimi makanisi ma kozala na bonsomi se moko mpe kaka moko mpo ya bana Kongo.
+Na yango, bingumba bya ekolo bikonzami na Mbula Matari mpé [[Lingomba lya Bantoma]] ba bingumba. Engumba yoko yoko ezali na bituka bikonzami yango moko lokola vili, komine, seketele mpé sefeli. Lisusu, Mobeko Likonzi moye mondimi makanisi ma bonsomi mpé molobi: bokonzi bonso bouti na bana-ekolo mpo bango nde ntina ya ebandeli ya bokonzi. Bana-ekolo bakopesa makanisi ma bango na kati ya mangomba mayike ma politiki, maye mabatelami na Mobeko Likonzi moye mondimi ete kosala lingomba lya politiki se moko ezali lokola kobuka mobeko mwa koteka ekolo. Na maye matali bonsomi bwa ekolo, basali mibeko bandimi makanisi ma kozala na bonsomi se moko mpé kaka moko mpo ya bana Kongo.
 
-==Mambi ma bomoto, bonsomi bwa ntina mpe ntomo ya mwana ekolo  mpe mambi ma leta==
-Mosali mibeko azali lisusu kondima bopesi Ekolo Nsomi ya Kongo makoki ma bato mpe bonsomi bwa ntina engebene na mibeko mya solo mya molongo esili kondima. Na yango akotisi makoki mpe bonsomi bona na kati ya Mobeko Likonzi. Yango wana, zambi ya mbongwana ya mambi ma mokili, Mobeko Likonzi moye mokotisi makanisi manene ma sika matali bokokani bwa mobali mpe mwasi.
+==Mambi ma bomoto, bonsomi bwa ntina mpé ntomo ya mwana ekolo mpé mambi ma leta==
+Mosali mibeko azali lisusu kondima bopesi Ekolo Nsomi ya Kongo makoki ma bato mpé bonsomi bwa ntina engebene na mibeko mya solo mya molongo esili kondima. Na yango akotisi makoki mpé bonsomi bona na kati ya Mobeko Likonzi. Yango wana, zambi ya mbongwana ya mambi ma mokili, Mobeko Likonzi moye mokotisi makanisi manene ma sika matali bokokani bwa mobali mpé mwasi.
 
-==Mambi ma bobonsisi mpe esaleli ya bokonzi==
+==Mambi ma bobonsisi mpé esaleli ya bokonzi==
 Bituluku bia bokonzi bwa sika na [[Kɔ́ngɔ-Kinshasa|Ekolo Nsomi ya Kongo]] byango biye:
 *[[Mokonzi wa Ekolo]]
 *[[Lingomba lya bantoma ba Ekolo]]
 *[[Mbula Matari]]
-*[[Ndako ya basambisi]] mpe [[bakati makambo]] 
+*[[Ndako ya basambisi]] mpé [[bakati makambo]] 
 
 Makanisi manene maye mazali kokamba bobongisi bituluku bina mango maye. 
 * 1. kobongisa esaleli elamu ya bituluku bia Leta 
@@ -26,17 +26,17 @@ Makanisi manene maye mazali kokamba bobongisi bituluku bina mango maye.
 * 6. kopesa etumbu na moto nyonso asali mbeba
 * 7. kondima bokaboli bokonzi na ndenge ya likelemba na maponami. 
 
-Yango wana, eleko ya mosala mwa Mokonzi wa Ekolo ekoki kozonga se mbala moko, kasi lisusu Mokonzi wa Ekolo azali na makoki ma kobatela Mobeko Likonzi, bonsomi bwa ekolo, etando mobimba ya ekolo, bokonzi bwa ekolo, botosi mibembano mpe boyokani na molongo mpe akozala mobongisi mpe mosemboli esaleli elamu ya bituluku bya ekolo, na lisalisi lya Mbula Matari mpe na bososoli bwa Lingomba lya Bantoma. 
+Yango wana, eleko ya mosala mwa Mokonzi wa Ekolo ekoki kozonga se mbala moko, kasi lisusu Mokonzi wa Ekolo azali na makoki ma kobatela Mobeko Likonzi, bonsomi bwa ekolo, etando mobimba ya ekolo, bokonzi bwa ekolo, botosi mibembano mpé boyokani na molongo mpé akozala mobongisi mpé mosemboli esaleli elamu ya bituluku bya ekolo, na lisalisi lya Mbula Matari mpé na bososoli bwa Lingomba lya Bantoma. 
 
-Bikela bya solo biye, Mokonzi wa Ekolo akotia maboko mpo ya mambi matali Mbula Matari to maye makambemi na Baminisele, bisengeli kozwa elembo ya [[Minisele wa yambo]] mpe, ntango mosusu, ya [[Minisele|Baminisele]], baye basengeli kosalela mpe kondima mokumba mona liboso lya Lingomba lya Bantoma. 
+Bikela bya solo biye, Mokonzi wa Ekolo akotia maboko mpo ya mambi matali Mbula Matari to maye makambemi na Baminisele, bisengeli kozwa elembo ya [[Minisele wa yambo]] mpé, ntango mosusu, ya [[Minisele|Baminisele]], baye basengeli kosalela mpé kondima mokumba mona liboso lya Lingomba lya Bantoma. 
 
-Mingi mpenza makambo matali bapaya, bobateli mpe bokengi bwa ekolo, maye mazalaki liboso se na maboko ma Mokonzi wa Ekolo, makomi mambi ma boyokani. Kasi, Mbula Matari, na bokasi bwa Minisele wa Yambo azali nkolo mpe motambwisi wa politiki ya ekolo, eye akobongisa na boyokani na Mokonzi wa Ekolo. 
+Mingi mpenza makambo matali bapaya, bobateli mpé bokengi bwa ekolo, maye mazalaki liboso se na maboko ma Mokonzi wa Ekolo, makomi mambi ma boyokani. Kasi, Mbula Matari, na bokasi bwa Minisele wa Yambo azali nkolo mpe motambwisi wa politiki ya ekolo, eye akobongisa na boyokani na Mokonzi wa Ekolo. 
 
 Azali na mokumba mwa kotanga misala mia ye liboso lya Lingomba lya Bantoma liye, lisanga, likoki kopesa ye etumbu na ndenge ya bopaleli ye. Lingomba lya Bantoma likoki lisusu kotatola libunga yoko yoko ya bakambi ba Mbula Matari na nzela ya mokanda mwa bokebisi. 
 
-Na bosangani na likita linene, Lingomba lya bantoma-basali mpe lya babongisi mibeko, lizali na makoki ma kofunda Mokonzi wa Ekolo mpe Minisele wa yambo liboso lya Ndako ya bazuzi ba Mobeko Likonzi, mingi mpenza na libunga linene lya boteki ekolo mpe boyebi mabe makoki kobebisa ekolo. 
+Na bosangani na likita linene, Lingomba lya bantoma-basali mpé lya babongisi mibeko, lizali na makoki ma kofunda Mokonzi wa Ekolo mpé Minisele wa yambo liboso lya Ndako ya bazuzi ba Mobeko Likonzi, mingi mpenza na libunga linene lya boteki ekolo mpé boyebi mabe makoki kobebisa ekolo. 
 
-Epai mosusu, na ntina ya makoki ma bokonzi mapesami na basali mibeko mpe na makoki ma kolanda misala mia Mbula Matari, bantoma ba ekolo bazali o likolo lya mibeko te; matomba ma bango makoki kolongwa mpe lingomba lya bantoma likoki kokufa na mobeko mwa Mokonzi wa Ekolo, soki mikakatano mizali kosila te kati na bango mpe Mbula Matari wa ekolo. 
+Epai mosusu, na ntina ya makoki ma bokonzi mapesami na basali mibeko mpé na makoki ma kolanda misala mia Mbula Matari, bantoma ba ekolo bazali o likolo lya mibeko te; matomba ma bango makoki kolongwa mpé lingomba lya bantoma likoki kokufa na mobeko mwa Mokonzi wa Ekolo, soki mikakatano mizali kosila te kati na bango mpé Mbula Matari wa ekolo. 
 
 Mobeko Likonzi moye mondimi lisusu bonsomi bwa bokonzi bwa bazuzi boye, basambisi banso bakambemi na Lisanga linene lya mambi matali bosembo lisangisi se basambisi mpe bakati makambo. Mpo ya bolamu bwa solo, bwanya mpe botambwisi na lombangu mikanda mia bato babuki mibeko, Ndako ya basambisi mpe bakati makambo ekabwani na biteni misato biye :
 * biyangeli bitali mambi ma bosambisi maye makonzami na ndako ya esambelo ya nsuka 
