*Empty MediaWiki Message*

--- a/Kapɔ́ti.mw
+++ b/Kapɔ́ti.mw
@@ -13,9 +13,9 @@ Ebateli ekopekisa nzoto na biso ekoto ngenge ya [[sida]], mpé ezwa [[bokɔnɔ]]
 
 '''Bolamu bwa ekanga bozali na tembe te.'''
 
-Ebateli moko okolata yango kaka mbala moko. Tanga malamu mpe landa mibeko mpo ya kosalela yango.
+Ebateli moko okolata yango kaka mbala moko. Tanga malamu mpé landa mibeko mpo ya kosalela yango.
 
-==Voir aussi==
+==Tála mpé==
 * [[Ekopekisa (Ndenge)|Ndenge ya kolata mpé kosalela ekanga]]
 * [[Nzela ya kopekisa zemi]]
 
