--- a/Sosialisimɛ.mw
+++ b/Sosialisimɛ.mw
@@ -4,7 +4,7 @@
 
 [[Image:Hw-marx.jpg|thumb|Karl Marx, 1818 - 1883]]
 
-'''Sosialisimɛ''' ezalí [[politiki]] ékopesa matomba ya mosala na mabɔrɔ ya basali bangó mɔkɔ mpe ékopekisa bokulaka ézala ya mwá liboke ya bato.
+'''Sosialisimɛ''' ezalí [[politiki]] ékopesa matomba ya mosala na mabɔrɔ ya basali bangó mɔkɔ mpé ékopekisa bokulaka ézala ya mwá liboke ya bato.
 
 
 
