*Empty MediaWiki Message*

--- a/Kominisimɛ.mw
+++ b/Kominisimɛ.mw
@@ -4,7 +4,7 @@
 [[category:politiki]]
 [[Image:162 6220.jpg|thumb|Lenin, 1870 - 1924 (Vladimir Iljitch Uljanov)]]
 
-'''Komynisimɛ''' ezalí [[politiki]] ékosenga bokulaka mpe matomba ya mosala mázala mpɔ na bolamu ya lingomba, kasi ékopekisa bokulaka ya moto mɔkɔ.
+'''Komynisimɛ''' ezalí [[politiki]] ékosenga bokulaka mpé matomba ya mosala mázala mpɔ na bolamu ya lingomba, kasi ékopekisa bokulaka ya moto mɔkɔ.
 
 [[ar:شيوعية]]
 [[ast:Comunismu]]
