--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -469,9 +469,9 @@ __NOTOC__
 {| border=&quot;1&quot; cellpadding=&quot;5&quot;
 |width=&quot;240&quot;| [[Vanuatu]] || [[Image:Vanuatu_coat_of_arms.jpg|120px]]
 |-
-| [[Vatican City]] || [[Image:Vatican_coa.png|120px]]
+| [[Vatican City]] || [[Image:Emblem of the Papacy.svg|120px]]
 |-
-| [[Venezuela]] || [[Image:Emblem of the Papacy.svg|120px]]
+| [[Venezuela]] || [[Image:Venezuela coat of arms.png|120px]]
 |-
 | [[Vietnami]] || [[Image:Viet-coa.PNG|120px]]
 |-
