--- a/Esálela.mw
+++ b/Esálela.mw
@@ -1,5 +1,5 @@
 [[Image:Macintosh classic.jpg|thumb|Ndakisa : esálela ya Apple]]
-'''Esálela''' tǒ '''odinatɛ́lɛ''' (''ordinateur'' na lokótá ya [[lifalansé]]) ezalí masíni ma botángi mpé ya kobómba bikomá biyíké.
+'''Esálela''' tǒ '''odinatɛ́lɛ''' (''ordinateur'' na lokótá ya [[lifalansé]]) ezalí masíni ma botángi mpé ya kobómba bikomá biyíké. Esálela ezalí masíni ya kotánga na mobando mazalín bwaya mingi koleka mpɔ na koyeba makambo ndenge yɔnsɔ.
 
 == Biténi ya masíni ==
 [[Image:Personal computer, exploded 5.svg|thumb|300px|left|Biténi ya odinatɛ́lɛ]]
