--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -14,7 +14,7 @@ __NOTOC__
 |-
 | [[Alémani]] || [[Image:Coat of Arms of Germany.svg|120px]]<br><small>the ''[[Bundesadler]]'' (Federal Eagle)</small>
 |-
-| [[Al Mamlaká al-Maghribiya]] || [[Image:morarms22.PNG|120px]]
+| [[Al Mamlaká al-Maghribiya]] || [[Image:Coat of arms of Morocco.png|120px]]
 |-
 | [[Andorra]] || [[Image:Andorra_coa.png|120px]]
 |-
