--- a/Kinsásá.mw
+++ b/Kinsásá.mw
@@ -12,7 +12,7 @@ ISO=CD-KN|
 dep=59|
 }}
 
-Mbóka tô engúmba '''Kinshasa''' - ekokí kotangemene ''Kinsásá'' tǒ mpé ''Kincásá'' - (óyo eyebenákí kala o nkómbó '''[[Léopoldville]]''') ezalí '''[[mbóka-mokonzi]]''' ya '''[[Kɔ́ngɔ-Kinshasa|Repubiliki ya Kɔ́ngɔ Demokratiki]]''' tǒ mpé '''[[Kɔ́ngɔ-Kinshasa]]'''. Ezalí mpé [[etúká]] (''province'') ya ekólo êná. Ezalí engúmba monɛ́nɛ, na milioni 8 ya bato (est.). Elongo na nyɔ́nsɔ óyo, Kinshasa ezalí engúmba ya míbalé na bingumba nyɔ́nsɔ ya mokili, na elobelí [[lifalansé]], na sima ya engúmba '''[[Pari]]''' ([[Falansia]]), mpé ezalí o káti ya bingúmba minɛ́nɛ koleka ya [[Afrika]] o nsé ya [[Sahara]]. 
+Mbóka tô engúmba '''Kinsásá''' —ekokí kotangemene ''Kinshásá''— (óyo eyebenákí kala o nkómbó ''Léopoldville'') ezalí '''[[mbóka-mokonzi]]''' ya '''[[Kɔ́ngɔ-Kinshasa|Repubiliki ya Kɔ́ngɔ Demokratiki]]'''. Ezalí mpé [[etúká]] (''province'') ya ekólo êná. Ezalí engúmba monɛ́nɛ, na milioni 8 ya bato (est.). Elongo na nyɔ́nsɔ óyo, Kinshasa ezalí engúmba ya míbalé na bingumba nyɔ́nsɔ ya mokili, na elobelí [[lifalansé]], na sima ya engúmba '''[[Pari]]''' ([[Falansia]]), mpé ezalí o káti ya bingúmba minɛ́nɛ koleka ya [[Afrika]] o nsé ya [[Sahara]]. 
 
 == Jyografi ==
 [[Image:Kinshasa 2001.jpg|thumb|290px|Kinshasa, Kongo, 2001]]
