*Empty MediaWiki Message*

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -8,8 +8,8 @@ mokáno			= Bosémbo, Bobóto, Mosálá|
 loyémbo			= [[Debout Congolais]] |
 nkótá_ya_lɛ́ta 		= [[lifalansé]]|
 nkótá_ya_ekólo          = [[lingála]], [[kiswahili]],<br />[[ciluba]], [[kikɔ́ngɔ]]|
-mbóka-mokonzi 		= Kinshasa|
-engúmba_monɛ́nɛ 	= [[Kinshasa]]|
+mbóka-mokonzi 		= Kinsásá|
+engúmba_monɛ́nɛ 	= [[Kinsásá]]|
 loléngé_lɛ́ta  	= [[Republiki]]|
 babengí_mokambi	= [[Bakambi ekólo Kɔ́ngɔ-Kinshasa|Mokonzi wa ekólo]] |
 nkómbó_mokambi 	= [[Joseph Kabila]] |
