--- a/Bɛndɛ́lɛ_ya_Kongó-Kinsásá.mw
+++ b/Bɛndɛ́lɛ_ya_Kongó-Kinsásá.mw
@@ -26,7 +26,7 @@
 
 {{nationalflags}}<!-- to edit this table, go to [[Template:Nationalflags]] -->
 
-[[Category:Repubiliki ya Kɔ́ngɔ Demokratiki]]
+[[Category:Kɔ́ngɔ-Kinshasa]]
 [[Category:Bɛndɛ́lɛ ya bisé|Kɔ́ngɔ Demokratiki, Repubiliki ya]]
 
 [[de:Flagge der Demokratischen Republik Kongo]]
