*Empty MediaWiki Message*

--- a/Politíki_ya_Kongó-Kinsásá.mw
+++ b/Politíki_ya_Kongó-Kinsásá.mw
@@ -4,6 +4,6 @@ Banda bana mboka Kongo-Kinshasa bazwaki lipanda na mwa [[30 yuni]] [[1960]], Eko
 [[fr:Politique_de_la_République_démocratique_du_Congo]]
 [[en:Politics_of_the_Democratic_Republic_of_the_Congo]]
 
-[[Category:Repubiliki ya Kɔ́ngɔ Demokratiki]]
+[[Category:Kɔ́ngɔ-Kinshasa]]
 [[Category:Kɔ́ngɔ-Kinshasa|Politiki bya Kongo-Kinshasa]]
 [[Category:Politiki bya Kɔ́ngɔ-Kinshasa]]
