*Empty MediaWiki Message*

--- a/Liste_des_éléments_par_nom.mw
+++ b/Liste_des_éléments_par_nom.mw
@@ -1,1 +1,42 @@
-
+===A===
+* [[Azoti]]
+===B===
+===C===
+===D===
+===E===
+===Ɛ===
+===F===
+===G===
+===Gb===
+===H===
+===I===
+* [[Idrojɛ́ní]]
+===K===
+* [[Kaboni]]
+* [[Koloki]]
+===L===
+===M===
+===Mb===
+===Mp===
+===N===
+===Nd===
+===Ng===
+===Nk===
+===Ns===
+===Nt===
+===Ny===
+===Nz===
+===O===
+* [[Oksijɛ́ní]]
+* [[Oxyde]]
+===Ɔ===
+===P===
+===R===
+===S===
+* [[Sodu]]
+===T===
+===U===
+===V===
+===W===
+===Y===
+===Z===
