--- a/Liste_des_éléments_par_nom.mw
+++ b/Liste_des_éléments_par_nom.mw
@@ -40,3 +40,8 @@
 ===W===
 ===Y===
 ===Z===
+
+
+[[Category:Kémi]]
+
+[[cy:Rhestr elfennau yn nhrefn yr wyddor]] [[da:Grundstoffer (alfabetisk)]] [[en:List of elements by name]] [[es:Categoría:Elementos químicos]] [[eo:Listo de kemiaj elementoj laŭ nomo]] [[ia:Lista de elementos per nomine]] [[lb:Lëscht vun den Elementer no Numm]] [[hu:Kémiai elemek listája betűrendben]] [[nl:Lijst van elementen op naam]] [[ja:元素の名前順一覧]] [[pl:Pierwiastki chemiczne według nazw]] [[ro:Lista elementelor chimice după nume]] [[simple:List of elements by name]] [[sl:Abecedni seznam elementov]] [[fi:Luettelo alkuaineista nimen mukaan]] [[sv:Lista över grundämnen efter namn]] [[uk:Алфавітний список хімічних елементів]] [[vo:Lised löminas kiemavik]] [[wa:Djivêye des elemints tchimikes, d' après leu no]]
