--- a/Liste_des_éléments_par_nom.mw
+++ b/Liste_des_éléments_par_nom.mw
@@ -1,4 +1,4 @@
-__NOTOC__ __NOEDITSECTION__
+__NOTOC__ 
 {{abc}}
 
 ===A===
@@ -7,6 +7,7 @@ __NOTOC__ __NOEDITSECTION__
 ===C===
 ===D===
 ===E===
+[[Eliyúmu]]
 ===Ɛ===
 ===F===
 ===G===
