*Empty MediaWiki Message*

--- a/Molɔngɔ́_mwa_komíni_ya_Kinsásá.mw
+++ b/Molɔngɔ́_mwa_komíni_ya_Kinsásá.mw
@@ -20,11 +20,11 @@ Ekakoli monɛ́nɛ : Engumbá [[Kinshasa]] o [[Repubiliki ya Kɔ́ngɔ Demokrati
 * [[Masina]]
 * [[Matete]]
 * [[Mont Ngafula]]
-* [[N'Djili]]
+* [[Ndjili]]
 * [[Ngaba]]
 * [[Ngaliema]]
 * [[Ngiri-Ngiri]]
-* [[N'sele]]
+* [[Nsele]]
 * [[Selembao]]
 
 ==Quartiers et lieu-dits==
