*Empty MediaWiki Message*

--- a/Patrice_Lumumba.mw
+++ b/Patrice_Lumumba.mw
@@ -15,6 +15,7 @@
 [[he:פטריס לומומבה]]
 [[it:Patrice Lumumba]]
 [[ja:パトリス・ルムンバ]]
+[[lt:Patris Lumumba]]
 [[nl:Patrice Lumumba]]
 [[no:Patrice Lumumba]]
 [[pl:Patrice Lumumba]]
