/* D */ fixed an image

--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -97,7 +97,7 @@ __NOTOC__
 ==D==
 
 {| border=&quot;1&quot; cellpadding=&quot;5&quot;
-|width=&quot;240&quot;| [[Denmark]] || [[Image:The_small_Danish_Coat_of_Arms.jpg|120px]]
+|width=&quot;240&quot;| [[Denmark]] || [[Image:Denmark coa.png|120px]]
 |-
  
 |-
