*Empty MediaWiki Message*

--- a/Fidel_Castro.mw
+++ b/Fidel_Castro.mw
@@ -1,6 +1,9 @@
 [[Image:Fidel_Castro5_cropped.JPG|right|thumb|Fidel Castro, Tatá-Mokonzi ya Cuba]]
 '''Fidel Alejandro {{smcp|Castro Rúz}}''', abótámi o [[mokɔlɔ 13 ya sánzá ya mwambe]] o [[mobú 1926]], azalí [[Tatá-Mokonzi]] ya [[Cuba]].
 
+== WebLinks ==
+* [http://www.sovetika.ru Sovetika.ru - site about Soviet era]
+
 {{ndámbo}}
 
 [[af:Fidel Castro]]
