--- a/Kongó-Brazzaville.mw
+++ b/Kongó-Brazzaville.mw
@@ -42,6 +42,8 @@ footnotes 	= [[Image:congo republic sm04.png|290px]] Republiki ya Kɔ́ngɔ.|
 '''Republiki ya Kɔ́ngɔ''' tǒ '''Kɔ́ngɔ-Brazzaville''' ezalí [[esé]] ya [[Afríka]] ya [[Mambénga]]. 
 
 == Lokótá ==
+eza mboka na bisso moko
+
 ==Likambo ==
 ==Bato ==
 [[Image:Congo-Rep-demography.png|left|600px|center|***Évolution de la démographie entre 1961 et 2003 (chiffre de la [[Organisation des Nations unies pour l'alimentation et l'agriculture|FAO]], 2005). Population en milliers d'habitants.]]
