--- a/Kongó-Brazzaville.mw
+++ b/Kongó-Brazzaville.mw
@@ -43,6 +43,7 @@ footnotes 	= [[Image:congo republic sm04.png|290px]] Republiki ya Kɔ́ngɔ.|
 
 == Lokótá ==
 eza mboka na bisso moko
+signé teddy morgan
 
 ==Likambo ==
 ==Bato ==
