/* Lokótá */ eza mbóka na ngáí tɛ́

--- a/Kongó-Brazzaville.mw
+++ b/Kongó-Brazzaville.mw
@@ -42,7 +42,7 @@ footnotes 	= [[Image:congo republic sm04.png|290px]] Republiki ya Kɔ́ngɔ.|
 '''Republiki ya Kɔ́ngɔ''' tǒ '''Kɔ́ngɔ-Brazzaville''' ezalí [[esé]] ya [[Afríka]] ya [[Mambénga]]. 
 
 == Lokótá ==
-eza mboka na bisso moko
+Na Kɔ́ngɔ balobamí nkótá boyíke. [[Falansé]] mpé [[lingála]] izalí nkótá ya lɛ́ta.
 
 ==Likambo ==
 ==Bato ==
