--- a/Biblíya.mw
+++ b/Biblíya.mw
@@ -1,43 +1,48 @@
 {{ndámbo}}
 {{KimokristoS}}
+[[Image:Bible.malmesbury.arp.jpg|left|250px|Biblíya]]
 '''Biblíya''' ezalí [[búku]]  bya [[bakrístu]].
-[[Image:Bible.malmesbury.arp.jpg|right|350px|]]
 
-*[[Genese]] 
-*[[Exode]] 
-*[[Yobo]] 
-*[[Mokapo]]
-*[[Baloma]]
-*[[Misala]]
-*[[Nzembo]] 
-*[[Yisaya]]
-*[[Yilimiya]]
-*[[Danyele]]
-*[[Mosakoli]] 
-*[[Ezekiele]]
-*[[Emoniseli]]
 
-*[[Marko]]
-*[[Matai]]
-*[[Luka]]
-*[[Yoane]]
-*[[1 Timote]]
-*[[2 Timote]]
-*[[1 Petelo]]
-*[[2 Petelo]]
-*[[Yakobo]] 
-*[[Bagalatia]]
-*[[Batesaloniki]]
-*[[Baebele]]
-*[[Masese]] 
 
-==Babúku==
+*'''Kondimana na '''
+**[[Genese]] 
+**[[Exode]] 
+**[[Yobo]] 
+**[[Mokapo]]
+**[[Baloma]]
+**[[Misala]]
+**[[Nzembo]] 
+**[[Yisaya]]
+**[[Yilimiya]]
+**[[Danyele]]
+**[[Mosakoli]] 
+**[[Ezekiele]]
+**[[Emoniseli]]
+
+*'''Kondimana na Sika'''
+**[[Marko]]
+**[[Matai]]
+**[[Luka]]
+**[[Yoane]]
+**[[1 Timote]]
+**[[2 Timote]]
+**[[1 Petelo]]
+**[[2 Petelo]]
+**[[Yakobo]] 
+**[[Bagalatia]]
+**[[Batesaloniki]]
+**[[Baebele]]
+**[[Masese]] 
+
+==Tála mpé==
+===Babúku===
 *Biblíya  	ISBN 0966843302  	 	  	
 *Biblíya        ISBN 9966-40-879-7 ABRDC-ABU, 2004
 *Mokanda na Kondimana na Sika na nkolo na biso Yesu Masiya - Njembo     ISBN 9966-40-110-5 SBRDC-ABU, 2000
 *Mokanda na Kondimana na Sika na nkolo na biso Yesu Masiya - Njembo 	ISBN 9966-40-112-1 	
 
-==Nkásá o libándá==
+===Nkásá o libándá===
 *Bulletin Dei Verbum, BDV 50, p.22 http://www.c-b-f.org/start.php?CONTID=08_01_02_03_01_03_00&LANG=en (lingɛlɛsi)
 *http://www.bibelarchiv-vegelahn.de/bibel_fremdsprachen.html (lialemani)
 *http://www.worldscriptures.org/pages/lingala.html (lingɛlɛsi)
