--- a/Nzémbo_(búku).mw
+++ b/Nzémbo_(búku).mw
@@ -4,7 +4,7 @@
 
 Na monoko ya [[ligresi]] babengaka '''banzembo''' óyo Ψαλμοί (=psalmoi; [[hebreu]]: תהילים =tehilim; [[falansé]]: psaume). [[Yésu|Yezu]] ayembaki banzemo óyo. Azalaki kosalela yango po nakopesa mateya, to po na losambo na ye moko. Bantoma pe bazalaki kosala ndenge moko.
 
-Yango wana banzembo etikalá tii lelo esika biso bakrísto tokoki kokuta maloba ya kokoka óyo tokoki kozwa po nakosolola na [[Nzámbe]]. 
+Yango wana banzembo etikalá tii lelo esika biso [[bakrísto]] tokoki kokuta maloba ya kokoka óyo tokoki kozwa po nakosolola na [[Nzámbe]]. 
 
 ==Tála mpé==
 ===Wikipedia===
@@ -18,3 +18,30 @@ Yango wana banzembo etikalá tii lelo esika biso bakrísto tokoki kokuta maloba 
 *[http://www.mechon-mamre.org/p/pt/pt2601.htm Voweled Hebrew and 1917 JPS translation]- includes [[MP3]] files of chapters read in Hebrew
 
 [[Category:Boklísto]]
+
+[[cs:Kniha žalmů]]
+[[de:Psalm]]
+[[en:Psalms]]
+[[eo:Psalmo]]
+[[es:Salmos]]
+[[fi:Psalmien kirja]]
+[[fr:Livre des Psaumes]]
+[[he:תהילים]]
+[[id:Mazmur]]
+[[it:Salmi]]
+[[ja:詩篇]]
+[[jv:Masmur]]
+[[ko:시편]]
+[[la:Liber Psalmorum]]
+[[nl:Psalmen]]
+[[nn:Salmane]]
+[[no:Salmenes bok]]
+[[nrm:Sieaume]]
+[[pl:Księga Psalmów]]
+[[pt:Salmos]]
+[[ru:Псалом]]
+[[sk:Kniha žalmov]]
+[[sl:Psalm]]
+[[sr:Псалми]]
+[[sv:Psaltaren]]
+[[zh:詩篇]]
